[package]
name = "spatial-partition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {version = "0.4.0" , features = ["html_reports"]}

[[bench]]
name = "insert_spatial_hash_benchmark"
harness = false

[[bench]]
name = "insert_quad_tree_benchmark"
harness = false

[[bench]]
name = "in_circle_benchmark"
harness = false

[dependencies]