[package]
name = "spatial-neighbors"
version = "0.1.0"
authors = ["ToBinio"]
edition = "2021"
description = "Simple to use implementation of certain Spatial-Partitioning Algorithms | DataStructures"
license = "MIT"
repository = "https://github.com/ToBinio/spatial-neighbors"
keywords = ["data-structures", "grid", "spatial", "quad-tree", "algorithms"]
categories = ["algorithms","data-structures"]
exclude = [
    "/.idea",
    "spatial-partition.iml"
]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "insert_spatial_hash_benchmark"
harness = false

[[bench]]
name = "insert_quad_tree_benchmark"
harness = false

[[bench]]
name = "in_circle_spatial_hash_benchmark"
harness = false

[[bench]]
name = "in_circle_quad_tree_benchmark"
harness = false